--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^7.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-spring": "^9.2.3",
+    "three": "^0.129.0",
     "twind": "^0.16.16"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/three": "^0.129.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "prettier": "^2.3.1",
     "typescript": "^4.3.2",
