--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nice-color-palettes": "^3.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.9.0",
     "react-spring": "^9.2.3",
     "three": "^0.129.0",
     "twind": "^0.16.16"
