--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "@alexvcasillas/use-observer": "^1.0.3",
-    "@react-three/drei": "^7.0.2",
-    "@react-three/fiber": "^7.0.1",
-    "nice-color-palettes": "^3.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-hook-form": "^7.9.0",
-    "react-spring": "^9.2.3",
-    "three": "^0.129.0",
-    "twind": "^0.16.16"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/three": "^0.129.1",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "prettier": "^2.3.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.8"
-  }
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"serve": "vite preview"
+	},
+	"dependencies": {
+		"@alexvcasillas/use-observer": "^1.0.3",
+		"@react-three/drei": "^7.0.2",
+		"@react-three/fiber": "^7.0.1",
+		"@xstate/fsm": "^1.6.1",
+		"@xstate/react": "^1.4.0",
+		"nice-color-palettes": "^3.0.0",
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0",
+		"react-hook-form": "^7.9.0",
+		"react-spring": "^9.2.3",
+		"three": "^0.129.0",
+		"twind": "^0.16.16"
+	},
+	"devDependencies": {
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
+		"@types/three": "^0.129.1",
+		"@vitejs/plugin-react-refresh": "^1.3.1",
+		"prettier": "^2.3.1",
+		"typescript": "^4.3.2",
+		"vite": "^2.3.8"
+	}
 }
