--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-hook-form": "^7.9.0",
+		"react-icons": "^4.2.0",
 		"react-spring": "^9.2.3",
+		"shortid": "^2.2.16",
 		"three": "^0.129.0",
-		"twind": "^0.16.16"
+		"twind": "^0.16.16",
+		"zustand": "^3.5.5"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
+		"@types/shortid": "^0.0.29",
 		"@types/three": "^0.129.1",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"prettier": "^2.3.1",
