--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"version": "0.0.0",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --port $PORT",
 		"build": "tsc && vite build",
 		"serve": "vite preview"
 	},
@@ -9,13 +9,14 @@
 		"@alexvcasillas/use-observer": "^1.0.3",
 		"@react-three/drei": "^7.0.2",
 		"@react-three/fiber": "^7.0.1",
-		"@xstate/fsm": "^1.6.1",
-		"@xstate/react": "^1.4.0",
+		"@vercel/node": "^1.12.1",
+		"isomorphic-unfetch": "^3.1.0",
 		"nice-color-palettes": "^3.0.0",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-hook-form": "^7.9.0",
 		"react-icons": "^4.2.0",
+		"react-router-dom": "^5.3.0",
 		"react-spring": "^9.2.3",
 		"shortid": "^2.2.16",
 		"three": "^0.129.0",
@@ -25,6 +26,7 @@
 	"devDependencies": {
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
+		"@types/react-router-dom": "^5.1.8",
 		"@types/shortid": "^0.0.29",
 		"@types/three": "^0.129.1",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
