--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@alexvcasillas/use-observer": "^1.0.3",
+		"@js-temporal/polyfill": "^0.2.0",
 		"@react-three/drei": "^7.0.2",
 		"@react-three/fiber": "^7.0.1",
 		"@vercel/node": "^1.12.1",
