--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-router-dom": "^5.3.0",
 		"react-spring": "^9.2.3",
 		"shortid": "^2.2.16",
+		"string-similarity": "^4.0.4",
 		"three": "^0.129.0",
 		"twind": "^0.16.16",
 		"zustand": "^3.5.5"
@@ -29,6 +30,7 @@
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router-dom": "^5.1.8",
 		"@types/shortid": "^0.0.29",
+		"@types/string-similarity": "^4.0.0",
 		"@types/three": "^0.129.1",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"prettier": "^2.3.1",
