--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
 	"version": "0.0.0",
 	"scripts": {
-		"dev": "vite --port $PORT",
-		"build": "tsc && vite build",
-		"serve": "vite preview"
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@alexvcasillas/use-observer": "^1.0.3",
-		"@js-temporal/polyfill": "^0.2.0",
-		"@react-three/drei": "^7.0.2",
-		"@react-three/fiber": "^7.0.1",
-		"@vercel/node": "^1.12.1",
-		"isomorphic-unfetch": "^3.1.0",
+		"@alexvcasillas/use-observer": "^1.1.2",
+		"@js-temporal/polyfill": "^0.4.4",
+		"@vercel/node": "^2.15.1",
+		"immer": "^10.0.2",
+		"isomorphic-unfetch": "^4.0.2",
 		"nice-color-palettes": "^3.0.0",
-		"react": "^17.0.0",
-		"react-dom": "^17.0.0",
-		"react-hook-form": "^7.9.0",
-		"react-icons": "^4.2.0",
-		"react-router-dom": "^5.3.0",
-		"react-spring": "^9.2.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.44.3",
+		"react-icons": "^4.9.0",
+		"react-spring": "^9.7.1",
 		"shortid": "^2.2.16",
 		"string-similarity": "^4.0.4",
-		"three": "^0.129.0",
-		"twind": "^0.16.16",
-		"zustand": "^3.5.5"
+		"twind": "^0.16.19",
+		"zustand": "^4.3.8"
 	},
 	"devDependencies": {
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
-		"@types/react-router-dom": "^5.1.8",
+		"@types/react": "^18.2.12",
+		"@types/react-dom": "^18.2.5",
 		"@types/shortid": "^0.0.29",
 		"@types/string-similarity": "^4.0.0",
-		"@types/three": "^0.129.1",
-		"@vitejs/plugin-react-refresh": "^1.3.1",
-		"prettier": "^2.3.1",
-		"typescript": "^4.3.2",
-		"vite": "^2.3.8"
+		"@vitejs/plugin-react": "^4.0.0",
+		"rome": "^12.1.3",
+		"typescript": "^5.1.3",
+		"vite": "^4.3.9",
+		"vite-plugin-vercel": "^0.2.0"
 	}
 }
