--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"@vitejs/plugin-react": "^4.0.4",
 		"rome": "^12.1.3",
 		"typescript": "^5.1.6",
-		"vite": "^4.4.8",
-		"vite-plugin-vercel": "^0.2.1"
+		"vite": "^4.4.8"
 	}
 }
