--- a/package.json
+++ b/package.json
@@ -12,22 +12,19 @@
 		"@vercel/node": "^2.15.8",
 		"immer": "^10.0.2",
 		"isomorphic-unfetch": "^4.0.2",
+		"nanoid": "^4.0.2",
 		"nice-color-palettes": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.45.3",
 		"react-icons": "^4.10.1",
 		"react-spring": "^9.7.2",
-		"shortid": "^2.2.16",
-		"string-similarity": "^4.0.4",
 		"twind": "^0.16.19",
 		"zustand": "^4.4.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.18",
 		"@types/react-dom": "^18.2.7",
-		"@types/shortid": "^0.0.29",
-		"@types/string-similarity": "^4.0.0",
 		"@vitejs/plugin-react": "^4.0.4",
 		"rome": "^12.1.3",
 		"typescript": "^5.1.6",
